<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"/>

    <fragment xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapDisplayActivity" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tool_bar">

        <TextView
            android:id="@+id/map_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_type"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/map_avg_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_avg_speed"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/map_cur_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_cur_speed"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/map_climb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_climb"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/map_calorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_calorie"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/map_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_distance"
            android:textSize="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/manual_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:minWidth="200dp"/>

        <Button
            android:id="@+id/manual_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:minWidth="200dp"/>
    </LinearLayout>
</RelativeLayout>